# halo2

./: Cargo.toml
halo2_gadgets/: Cargo.toml
halo2_gadgets/benches/: poseidon.rs
halo2_proofs/src/plonk/: circuit.rs
