[workspace]
members = [
    "halo2",
    "halo2_gadgets",
    "halo2_proofs",
]

[patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
halo2curves = { git = "https://github.com/quantstamp/halo2curves.git",branch = "analyzer"}

[patch."https://github.com/zcash/halo2.git"]
halo2_proofs = { git = "https://github.com/Analyzable-Halo2/zcash-halo2.git", package = "halo2_proofs"}
